<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height= "0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".CompressActivity">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/enter_archive_name" />

            <EditText
                android:id="@+id/archive_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/archive_name_hint"
                android:lines="1"
                android:singleLine="true"
                android:maxLines="1"
                android:minLines="1"
                android:scrollHorizontally="true">

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/archive_path"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#888888"
                    android:hint="@string/output_directory"
                    android:lines="1"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:maxLines="1"
                    android:paddingLeft="4dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/browse_path"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/browse"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/archive_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#888888"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical"
                    android:hint="@string/files_to_compress"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingLeft="4dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/browse_to"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:text="@string/select"
                    android:textStyle="italic" />
            </LinearLayout>


            <TextView
                android:id="@+id/archive_formatlbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/archive_format" />

            <Spinner
                android:id="@+id/archive_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/compress_levellbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/compression_level" />

            <Spinner
                android:id="@+id/compression_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:entries="@array/compression_level_arr" />

            <TextView
                android:id="@+id/compress_methodlbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/compression_method" />

            <Spinner
                android:id="@+id/compression_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/dict_sizelbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/dictionary_size" />

            <Spinner
                android:id="@+id/dict_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/word_sizelbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/word_size" />

            <Spinner
                android:id="@+id/word_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/solid_blocklbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/solid_block_size" />

            <Spinner
                android:id="@+id/solid_block_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/pass_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="5dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/archive_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textVisiblePassword"
                android:lines="1"
                android:maxLines="1" />

            <TextView
                android:id="@+id/enc_methodlbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/encryption_method" />

            <Spinner
                android:id="@+id/enc_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="5dp" />

            <CheckBox
                android:id="@+id/enc_file_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="2dp"
                android:text="@string/encrypt_file_names" />


            <TextView
                android:id="@+id/m_use_decomlbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="3dp"
                android:text="@string/memory_usage_for_decompressing" />

            <TextView
                android:id="@+id/m_use_decom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="#ff0011"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/m_use_complbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="3dp"
                android:padding="3dp"
                android:text="@string/memory_usage_for_compressing" />

            <TextView
                android:id="@+id/m_use_comp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="#ff0011"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:textColor="#ffffff" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/compress_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:minWidth="52dp"
        android:minHeight="52dp"
        android:padding="20dp"
        android:text="@string/ok"
        android:textStyle="bold" />
</LinearLayout>