<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ff3333"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/format_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#882222"
        android:text="@string/format_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/format_ext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#4444ff"
        android:ellipsize="marquee"
        android:padding="2dp"
        android:text="@string/format_extensions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/format_updatable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#3333ff"
        android:padding="2dp"
        android:text="@string/format_updatable"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/format_keepname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#5555ff"
        android:padding="2dp"
        android:text="@string/format_keepname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/format_sig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#2222ff"
        android:padding="2dp"
        android:text="@string/format_signature"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

</LinearLayout>
