<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ff2244"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/codec_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#882222"
        android:text="@string/codec_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/codec_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#5555ff"
        android:padding="2dp"
        android:text="@string/codec_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/codec_encoder_assigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#3333ff"
        android:padding="2dp"
        android:text="@string/codec_encoder_assigned"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/codec_libindex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="#6644ff"
        android:padding="2dp"
        android:text="@string/codec_lib_index"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

</LinearLayout>
