<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/listheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_frame"
        android:ellipsize="marquee"
        android:gravity="center"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/filelist_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#444444"
        android:cacheColorHint="#444444"
        android:scrollbars="vertical"

        />

    <LinearLayout
        android:id="@+id/lower_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/panel_frame"
        android:gravity="center" >

        <Button
            android:id="@+id/path_up"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/folder_up" />

        <Button
            android:id="@+id/new_folder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:text="@string/new_folder" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>