<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExtractionActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="1- Choose an archive file:*" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:background="#fffa0000"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"

            android:focusableInTouchMode="true"

            android:hint="@string/open_archive_hint"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffff"
            android:textSize="19sp" />

        <Button
            android:id="@+id/open_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:minWidth="60dp"
            android:minHeight="60dp"
            android:text="@string/open_archive"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="2- Choose Extraction Directory:*" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/extractionFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"

            android:layout_weight="1"
            android:background="#111111"
            android:clickable="true"
            android:ellipsize="marquee"

            android:focusable="true"

            android:focusableInTouchMode="true"
            android:hint="@string/extract_to_hint"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <Button
            android:id="@+id/btn_extract_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:minHeight="60dp"
            android:text="@string/extract_to"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3- Extract*" />

    <Button
        android:id="@+id/extract_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/extract"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>
